--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     </form>
 
-    <ul></ul>
+    <ul>
+        <p id="list">ads</p>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
